--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,6 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "tsteur/sami": "dev-master",
-        "phine/sami-github": "1.0.4"
+        "tsteur/sami": "dev-master"
     }
 }
