--- a/app/composer.json
+++ b/app/composer.json
@@ -4,7 +4,8 @@
         "slim/slim": "2.*",
         "slim/extras": "2.*",
         "slim/views": "0.1.*",
-        "dflydev/markdown": "v1.0.2"
+        "dflydev/markdown": "v1.0.2",
+        "ezyang/htmlpurifier": "v4.5.0"
     },
     "autoload":{
         "psr-0":{
