updated filenames (removed whitespace)

--- a/generator/template/manifest.yml
+++ b/generator/template/manifest.yml
@@ -1,10 +1,10 @@
 name: markdown
 
 global:
-    "pages/namespaces.twig": "1. Namespaces.md"
-    "pages/interfaces.twig": "3. Interfaces.md"
-    "pages/classes.twig": "2. Classes.md"
-    "pages/index.twig": "4. Index.md"
+    "pages/namespaces.twig": "Namespaces.md"
+    "pages/interfaces.twig": "Interfaces.md"
+    "pages/classes.twig": "Classes.md"
+    "pages/index.twig": "Index.md"
 
 class:
     "pages/class.twig": "%s.md"
