I need a list of classnames to generate the menu

--- a/generator/template/manifest.yml
+++ b/generator/template/manifest.yml
@@ -5,6 +5,7 @@ global:
     "pages/interfaces.twig": "Interfaces.md"
     "pages/classes.twig": "Classes.md"
     "pages/index.twig": "Index.md"
+    "pages/classnames.twig": "Classnames.md"
 
 class:
     "pages/class.twig": "%s.md"
