only include needed bootstrap components

--- a/app/public/.htaccess
+++ b/app/public/.htaccess
@@ -20,6 +20,8 @@ ExpiresByType image/jpeg "access 1 month"
 ExpiresByType image/gif "access 1 month"
 ExpiresByType image/png "access 1 month"
 ExpiresByType text/css "access 3 days"
+ExpiresByType application/font-woff "access 1 month"
+ExpiresByType application/font-ttf "access 1 month"
 ExpiresByType application/pdf "access 1 month"
 ExpiresByType text/x-javascript "access 3 days"
 ExpiresByType application/x-shockwave-flash "access 1 month"
