--- a/generator/composer.json
+++ b/generator/composer.json
@@ -14,7 +14,7 @@
     "repositories": [
         {
             "type": "git",
-            "url": "https://github.com/tsteur/Sami"
+            "url": "https://github.com/piwik/Sami"
         }
     ],
     "require": {
