--- a/app/composer.json
+++ b/app/composer.json
@@ -1,15 +1,20 @@
 {
+    "autoload":{
+        "psr-0":{
+            "": ""
+        }
+    },
     "require": {
+        "php": ">=5.4.0",
         "twig/twig": "1.12.*",
         "slim/slim": "2.*",
         "slim/extras": "2.*",
         "slim/views": "0.1.*",
         "dflydev/markdown": "v1.0.2",
-        "ezyang/htmlpurifier": "v4.5.0"
+        "erusev/parsedown-extra": "~0.2",
+        "ezyang/htmlpurifier": "4.5.0"
     },
-    "autoload":{
-        "psr-0":{
-            "": ""
-        }
+    "require-dev": {
+        "phpunit/phpunit": "~4.0"
     }
 }
