--- a/app/composer.json
+++ b/app/composer.json
@@ -10,9 +10,7 @@
         "slim/slim": "2.*",
         "slim/extras": "2.*",
         "slim/views": "0.1.*",
-        "dflydev/markdown": "v1.0.2",
-        "erusev/parsedown-extra": "~0.2",
-        "ezyang/htmlpurifier": "4.5.0"
+        "erusev/parsedown-extra": "~0.2.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0"
