--- a/app/composer.json
+++ b/app/composer.json
@@ -10,7 +10,8 @@
         "slim/slim": "2.*",
         "slim/extras": "2.*",
         "slim/views": "0.1.*",
-        "erusev/parsedown-extra": "~0.2.0"
+        "erusev/parsedown-extra": "~0.2.0",
+        "mnapoli/front-yaml": "~1.2"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0"
