Prevent directory listing
https://github.com/piwik/piwik/issues/10507

--- a/app/public/.htaccess
+++ b/app/public/.htaccess
@@ -31,3 +31,6 @@ ExpiresDefault "access 8 days"
 ## EXPIRES CACHING ##
 
 AddType application/font-woff .woff
+
+# Prevent directory listing
+Options -Indexes 
