--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,9 @@
 /generator/vendor
 /generator/composer.phar
 /app/vendor
+/app/node_modules
 /app/composer.phar
+/app/public/dist/
 /.idea
 /app/config/local.php
 /app/tmp/cache/*
