--- a/app/composer.json
+++ b/app/composer.json
@@ -6,12 +6,11 @@
     },
     "require": {
         "php": ">=5.4.0",
-        "twig/twig": "1.12.*",
-        "slim/slim": "2.*",
-        "slim/extras": "2.*",
-        "slim/views": "0.1.*",
+        "slim/slim": "^3.0",
+        "slim/twig-view": "^2.2",
         "michelf/php-markdown": "1.4.1",
-        "mnapoli/front-yaml": "~1.2"
+        "mnapoli/front-yaml": "~1.2",
+        "monolog/monolog": "^1.23"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0"
