--- a/app/composer.json
+++ b/app/composer.json
@@ -8,7 +8,7 @@
         "php": ">=5.4.0",
         "slim/slim": "^3.0",
         "slim/twig-view": "^2.2",
-        "michelf/php-markdown": "1.4.1",
+        "michelf/php-markdown": "^1.7",
         "mnapoli/front-yaml": "~1.2",
         "monolog/monolog": "^1.23"
     },
