--- a/app/package.json
+++ b/app/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "bootstrap": "^3.3.7",
+    "bootstrap": "^4.0.0-beta",
     "bootstrap-3-typeahead": "^4.0.2",
     "font-awesome": "^4.7.0",
     "highlight.js": "^9.12.0",
     "jquery": "^3.2.1",
-    "node-sass": "^4.5.3"
+    "node-sass": "^4.5.3",
+    "popper.js": "^1.12.6"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.5",
@@ -20,6 +21,7 @@
     "grunt-contrib-cssmin": "^2.2.1",
     "grunt-contrib-jshint": "^1.1.0",
     "grunt-contrib-less": "^1.4.1",
+    "grunt-contrib-sass": "^1.0.0",
     "grunt-contrib-uglify": "^3.1.0",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-postcss": "^0.9.0",
