--- a/app/composer.json
+++ b/app/composer.json
@@ -10,7 +10,8 @@
         "slim/twig-view": "^2.2",
         "michelf/php-markdown": "^1.7",
         "mnapoli/front-yaml": "~1.2",
-        "monolog/monolog": "^1.23"
+        "monolog/monolog": "^1.23",
+        "teamtnt/tntsearch": "^1.1"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0"
