--- a/app/package.json
+++ b/app/package.json
@@ -4,16 +4,16 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "bootstrap": "^4.0.0-beta",
+    "bootstrap": "^4.0.0-beta.2",
     "corejs-typeahead": "^1.2.1",
     "font-awesome": "^4.7.0",
     "highlight.js": "^9.12.0",
     "jquery": "^3.2.1",
-    "node-sass": "^4.5.3",
-    "popper.js": "^1.12.6"
+    "node-sass": "^4.7.2",
+    "popper.js": "^1.13.0"
   },
   "devDependencies": {
-    "autoprefixer": "^7.1.5",
+    "autoprefixer": "^7.1.6",
     "grunt": "^1.0.1",
     "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-concat": "^1.0.1",
@@ -22,7 +22,7 @@
     "grunt-contrib-jshint": "^1.1.0",
     "grunt-contrib-less": "^1.4.1",
     "grunt-contrib-sass": "^1.0.0",
-    "grunt-contrib-uglify": "^3.1.0",
+    "grunt-contrib-uglify": "^3.2.1",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-postcss": "^0.9.0",
     "grunt-sass": "^2.0.0",
