--- a/generator/composer.json
+++ b/generator/composer.json
@@ -1,14 +1,14 @@
 {
     "name": "piwik/pluginapi-doc-generator",
     "description": "Generates plugin API documentation",
-    "keywords": ["piwik","web","analytics"],
-    "homepage": "http://piwik.org",
+    "keywords": ["matomo","web","analytics"],
+    "homepage": "https://matomo.org",
     "license": "GPL-3.0+",
     "authors": [
         {
-            "name": "The Piwik Team",
-            "email": "hello@piwik.org",
-            "homepage": "http://piwik.org/the-piwik-team/"
+            "name": "The Matomo Team",
+            "email": "hello@matomo.org",
+            "homepage": "https://matomo.org/the-piwik-team/"
         }
     ],
     "autoload": {
