--- a/app/public/.htaccess
+++ b/app/public/.htaccess
@@ -7,6 +7,8 @@
 # "index.php" front controller, keeping the query string intact
 
 <IfModule mod_rewrite.c>
+	RewriteRule ^favicon.ico$ /favicon.png [R,L]
+
 	RewriteCond %{REQUEST_FILENAME} !-f
 	RewriteCond %{REQUEST_FILENAME} !-d
 	RewriteRule ^(.*)$ index.php/$1 [L]
